# purs-buddy

./: CHANGELOG.md  Makefile  README.md  purs-buddy.cabal  stack.yaml
app/: Main.hs
src/Purs/: Buddy.hs
src/Purs/Buddy/: Args.hs  Derive.hs  Example.hs  Types.hs
