cabal-version: 1.12

name:           purs-buddy
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/purs-buddy#readme>
homepage:       https://github.com/githubuser/purs-buddy#readme
bug-reports:    https://github.com/githubuser/purs-buddy/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/githubuser/purs-buddy

library
  exposed-modules:
      Purs.Buddy
      Purs.Buddy.Args
      Purs.Buddy.Example
      Purs.Buddy.Derive
      Purs.Buddy.Types
  other-modules:
      Paths_purs_buddy
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , aeson
    , aeson-qq
    , bytestring
    , directory
    , foldl
    , strict
    , text
    , turtle >= 1.6.1
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
    QuasiQuotes
    ExtendedDefaultRules
    TemplateHaskell
    RecordWildCards
    OverloadedStrings

executable purs-buddy
  main-is: Main.hs
  other-modules:
      Paths_purs_buddy
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , purs-buddy
  default-language: Haskell2010

test-suite purs-buddy-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_purs_buddy
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , purs-buddy
  default-language: Haskell2010
